--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   },
   "peerDependencies": {
     "react": ">=0.13"
+  },
+  "scripts": {
+    "compile": "babel src --out-dir lib",
+    "prepublish": "npm run compile"
+  },
+  "devDependencies": {
+    "babel": "^5.6.23"
   }
 }
