--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.1.3"
+    "classnames": "^2.1.3",
+    "object-assign": "^3.0.0"
   },
   "peerDependencies": {
     "react": ">=0.13"
