--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "clamp": "^1.0.1",
     "classnames": "^2.1.3",
+    "material-design-lite": "tleunen/material-design-lite#modules",
     "object-assign": "^3.0.0"
   },
   "peerDependencies": {
