--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "button",
     "card",
     "textfield",
-    "icon"
+    "icon",
+    "switch",
+    "radio-group",
+    "radio"
   ],
   "author": {
     "name": "Tommy Leunen",
@@ -26,7 +29,6 @@
   "dependencies": {
     "clamp": "^1.0.1",
     "classnames": "^2.1.3",
-    "material-design-lite": "tleunen/material-design-lite#modules",
     "object-assign": "^3.0.0"
   },
   "peerDependencies": {
