--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-component",
     "mdl",
     "material-design",
+    "badge",
     "checkbox",
     "table",
     "data-table",
@@ -34,11 +35,16 @@
   "peerDependencies": {
     "react": ">=0.13"
   },
+  "devDependencies": {
+    "babel": "^5.6.23",
+    "babel-core": "^5.8.9",
+    "babel-loader": "^5.3.2",
+    "webpack": "^1.10.5",
+    "webpack-dev-server": "^1.10.1"
+  },
   "scripts": {
     "compile": "babel src --out-dir lib",
-    "prepublish": "npm run compile"
-  },
-  "devDependencies": {
-    "babel": "^5.6.23"
+    "prepublish": "npm run compile",
+    "demo": "webpack-dev-server --content-base demo/"
   }
 }
