added demo toggle

--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "mdl",
     "material-design",
     "badge",
-    "checkbox",
-    "table",
-    "data-table",
     "button",
     "card",
-    "textfield",
+    "checkbox",
+    "data-table",
+    "fab-button",
     "icon",
-    "switch",
+    "icon-button",
+    "icon-toggle",
+    "radio",
     "radio-group",
-    "radio"
+    "switch",
+    "textfield"
   ],
   "author": {
     "name": "Tommy Leunen",
