--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "progress-bar",
     "spinner",
     "slider",
-    "tooltip"
+    "tooltip",
+    "menu",
+    "dropdown"
   ],
   "author": {
     "name": "Tommy Leunen",
