--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.1.3",
-    "object-assign": "^3.0.0"
+    "classnames": "^2.1.3"
   },
   "peerDependencies": {
     "react": ">=0.13"
