--- a/package.json
+++ b/package.json
@@ -42,14 +42,16 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.1.3",
-    "react": "^0.13.3"
+    "classnames": "^2.1.3"
   },
   "devDependencies": {
     "babel": "^5.8.21",
     "babel-loader": "^5.3.2",
     "webpack": "^1.11.0",
     "webpack-dev-server": "^1.10.1"
+  },
+  "peerDependencies": {
+    "react": "0.13.x"
   },
   "scripts": {
     "compile": "babel src --out-dir lib",
