--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "react": "0.13.x"
   },
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
     "demo": "webpack-dev-server --content-base ."
