--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "0.10"
+  - "node"
   - "0.12"
-  - "iojs"
+  - "0.10"
 before_script:
   - npm install -g eslint babel-eslint eslint-plugin-react
 script:
