Switch to use ESLint jsx-quotes rule

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,7 @@
         "camelcase": [2, {"properties": "never"}],
         "comma-style": [2, "last"],
         "indent": [2, 4, {"SwitchCase": 1}],
+        "jsx-quotes": 2,
         "no-underscore-dangle": 0,
         "quotes": [2, "single", "avoid-escape"],
         "semi": [2, "always"],
@@ -24,7 +25,6 @@
         "react/display-name": 0,
         "react/jsx-boolean-value": [2, "always"],
         "react/jsx-no-undef": 2,
-        "react/jsx-quotes": 2,
         "react/jsx-sort-props": 0,
         "react/jsx-sort-prop-types": 2,
         "react/jsx-uses-react": 2,
