--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "webpack-dev-server": "1.12.0"
   },
   "peerDependencies": {
-    "react": "0.13.x || ^0.14.0"
+    "react": "0.13.x || ^0.14.0-alpha1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
