--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "babel": "5.8.23",
     "babel-loader": "5.3.2",
+    "react": "0.13.3",
     "webpack": "1.12.2",
     "webpack-dev-server": "1.12.0"
   },
