--- a/package.json
+++ b/package.json
@@ -41,16 +41,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "clamp": "1.0.1",
-    "classnames": "2.1.5"
+    "clamp": "^1.0.1",
+    "classnames": "^2.1.5"
   },
   "devDependencies": {
-    "babel": "5.8.23",
-    "babel-loader": "5.3.2",
-    "react": "0.14.0",
-    "react-dom": "0.14.0",
-    "webpack": "1.12.2",
-    "webpack-dev-server": "1.12.0"
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.2",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   },
   "peerDependencies": {
     "react": "0.14.x",
