--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "webpack-dev-server": "^1.12.0"
   },
   "peerDependencies": {
-    "react": "0.14.x",
-    "react-dom": "0.14.x"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
