--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "mocha": "^2.3.3",
     "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
@@ -57,7 +59,7 @@
     "react-dom": "0.14.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "mocha --compilers js:babel/register --recursive",
     "lint": "eslint .",
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
