--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "glob": "^5.0.15",
     "isparta": "^3.1.0",
     "nodemon": "^1.7.1",
     "react": "^0.14.0",
