--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
   },
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "eslint": "^1.7.1",
+    "eslint-plugin-react": "^3.5.1",
     "expect": "^1.12.2",
     "mocha": "^2.3.3",
     "react": "^0.14.0",
