--- a/package.json
+++ b/package.json
@@ -48,10 +48,13 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
+    "coveralls": "^2.11.4",
     "eslint": "^1.7.1",
     "eslint-plugin-react": "^3.5.1",
     "expect": "^1.12.2",
+    "isparta": "^3.1.0",
     "mocha": "^2.3.3",
+    "mocha-lcov-reporter": "^1.0.0",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
@@ -64,6 +67,7 @@
   },
   "scripts": {
     "test": "mocha --compilers js:babel/register --recursive",
+    "test:cov": "babel-node $(npm bin)/isparta cover $(npm bin)/_mocha --report lcovonly -- -R spec --recursive",
     "lint": "eslint .",
     "compile": "babel src --out-dir lib",
     "prepublish": "npm run compile",
