--- a/package.json
+++ b/package.json
@@ -53,6 +53,15 @@
     "eslint-plugin-react": "^3.5.1",
     "expect": "^1.12.2",
     "isparta": "^3.1.0",
+    "isparta-instrumenter-loader": "^0.2.1",
+    "karma": "^0.13.14",
+    "karma-chrome-launcher": "^0.2.1",
+    "karma-cli": "^0.1.1",
+    "karma-coverage": "^0.5.3",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-sourcemap-loader": "^0.3.6",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
@@ -65,7 +74,8 @@
     "react-dom": "0.14.x"
   },
   "scripts": {
-    "test": "mocha --compilers js:babel/register --recursive",
+    "test2": "mocha --compilers js:babel/register --recursive",
+    "test": "karma start --single-run",
     "posttest": "npm run lint",
     "test:cov": "babel-node $(npm bin)/isparta cover $(npm bin)/_mocha --report html --report lcovonly -- -R spec --recursive",
     "lint": "eslint .",
