--- a/package.json
+++ b/package.json
@@ -45,30 +45,34 @@
     "classnames": "^2.1.5"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.2",
+    "babel-cli": "^6.1.18",
+    "babel-core": "^6.1.21",
+    "babel-eslint": "^4.1.5",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "coveralls": "^2.11.4",
-    "eslint": "^1.7.1",
-    "eslint-config-airbnb": "^0.1.1",
-    "eslint-plugin-react": "^3.5.1",
+    "eslint": "^1.9.0",
+    "eslint-config-airbnb": "^1.0.0",
+    "eslint-plugin-react": "^3.9.0",
     "expect": "^1.13.0",
-    "isparta": "^3.1.0",
-    "isparta-instrumenter-loader": "0.2.1",
-    "karma": "^0.13.14",
+    "isparta": "^4.0.0",
+    "isparta-instrumenter-loader": "^1.0.0",
+    "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.1",
     "karma-cli": "^0.1.1",
     "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.0",
+    "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.3",
-    "react": "^0.14.0",
-    "react-addons-test-utils": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "mocha": "^2.3.4",
+    "react": "^0.14.2",
+    "react-addons-test-utils": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "webpack": "^1.12.6",
+    "webpack-dev-server": "^1.12.1"
   },
   "peerDependencies": {
     "react": "0.14.x",
