update docs with latest version of react-router, babel, history, ...
fixes tests

--- a/package.json
+++ b/package.json
@@ -57,6 +57,10 @@
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.9.0",
     "expect": "^1.13.0",
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.6",
+    "history": "^1.13.0",
+    "html-loader": "^0.3.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.15",
@@ -67,18 +71,14 @@
     "karma-mocha-reporter": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.3.4",
-    "react": "^0.14.2",
-    "react-addons-test-utils": "^0.14.2",
-    "react-dom": "^0.14.2",
-    "webpack": "^1.12.6",
-    "webpack-dev-server": "^1.12.1",
-    "gulp": "^3.9.0",
-    "gulp-util": "^3.0.6",
+    "mocha": "^2.3.3",
     "open": "0.0.5",
-    "react-router": "^1.0.0-beta3",
-    "webpack": "^1.11.0",
-    "webpack-dev-server": "^1.10.1"
+    "react": "^0.14.0",
+    "react-addons-test-utils": "^0.14.0",
+    "react-dom": "^0.14.0",
+	"react-router": "^1.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.0"
   },
   "peerDependencies": {
     "react": "0.14.x",
