--- a/package.json
+++ b/package.json
@@ -71,12 +71,15 @@
     "karma-mocha-reporter": "^1.1.1",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
+    "marked": "^0.3.5",
+    "marked-renderer-mdl": "0.0.2",
     "mocha": "^2.3.3",
     "open": "0.0.5",
+    "prismjs": "^1.3.0",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
     "react-dom": "^0.14.0",
-	"react-router": "^1.0.0",
+    "react-router": "^1.0.0",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.0"
   },
