--- a/package.json
+++ b/package.json
@@ -2,37 +2,16 @@
   "name": "react-mdl",
   "version": "1.0.1",
   "description": "React Components for the Material Design Lite UI framework",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": "tleunen/react-mdl",
   "keywords": [
-    "react",
-    "react-component",
-    "mdl",
-    "material-design",
-    "badge",
-    "button",
-    "card",
-    "checkbox",
-    "data-table",
-    "fab-button",
-    "icon",
-    "icon-button",
-    "icon-toggle",
-    "radio",
-    "radio-group",
-    "switch",
-    "textfield",
-    "progress",
-    "progress-bar",
-    "spinner",
-    "slider",
-    "tooltip",
-    "menu",
-    "dropdown",
-    "Layout",
-    "Drawer",
-    "Grid",
-    "Tabs"
+    "react", "react-component", "mdl", "material-design",
+    "badge", "button", "card", "checkbox", "data-table",
+    "fab-button", "icon", "icon-button", "icon-toggle",
+    "radio", "radio-group", "switch", "textfield",
+    "progress", "progress-bar", "spinner", "slider",
+    "tooltip", "menu", "dropdown", "Layout", "Drawer",
+    "Grid", "Tabs"
   ],
   "author": {
     "name": "Tommy Leunen",
@@ -57,8 +36,6 @@
     "eslint-config-airbnb": "^1.0.0",
     "eslint-plugin-react": "^3.9.0",
     "expect": "^1.13.0",
-    "gulp": "^3.9.0",
-    "gulp-util": "^3.0.6",
     "history": "^1.13.0",
     "html-loader": "^0.3.0",
     "isparta": "^4.0.0",
@@ -74,7 +51,6 @@
     "marked": "^0.3.5",
     "marked-renderer-mdl": "0.0.2",
     "mocha": "^2.3.3",
-    "open": "0.0.5",
     "prismjs": "^1.3.0",
     "react": "^0.14.0",
     "react-addons-test-utils": "^0.14.0",
@@ -90,9 +66,12 @@
   "scripts": {
     "test": "karma start --single-run",
     "posttest": "npm run lint",
-    "lint": "eslint .",
+    "lint": "eslint src",
     "compile": "rm -rf lib && babel src --ignore __tests__ --out-dir lib",
     "prepublish": "npm run compile",
-    "demo": "webpack-dev-server --content-base ."
+    "predocs": "node scripts/docs.js",
+    "docs": "webpack",
+    "postdocs": "mkdir -p _ghpages && cp -r extra/material.* docs/* _ghpages",
+    "docs:serve": "webpack-dev-server --content-base _ghpages"
   }
 }
