--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,8 @@
         "no-const-assign": 2,
         "space-after-keywords": 0,
 
-        "react/prop-types": [2, { ignore: ["children"] }]
+        "react/prop-types": [2, { "ignore": ["children"] }],
+        "react/no-multi-comp": [2, { "ignoreStateless": true }]
     },
     "globals": {
         "componentHandler": true,
