--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "react-mdl",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React Components for the Material Design Lite UI framework",
   "main": "lib/index.js",
   "repository": "tleunen/react-mdl",
   "keywords": [
-    "react", "react-component", "mdl", "material-design",
-    "badge", "button", "card", "checkbox", "data-table",
-    "fab-button", "icon", "icon-button", "icon-toggle",
-    "radio", "radio-group", "switch", "textfield",
-    "progress", "progress-bar", "spinner", "slider",
-    "tooltip", "menu", "dropdown", "Layout", "Drawer",
-    "Grid", "Tabs"
+    "react",
+    "react-component",
+    "mdl",
+    "material-design",
+    "badge",
+    "button",
+    "card",
+    "checkbox",
+    "data-table",
+    "fab-button",
+    "icon",
+    "icon-button",
+    "icon-toggle",
+    "radio",
+    "radio-group",
+    "switch",
+    "textfield",
+    "progress",
+    "progress-bar",
+    "spinner",
+    "slider",
+    "tooltip",
+    "menu",
+    "dropdown",
+    "Layout",
+    "Drawer",
+    "Grid",
+    "Tabs"
   ],
   "author": {
     "name": "Tommy Leunen",
