--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-mdl",
   "version": "1.0.2",
-  "description": "React Components for the Material Design Lite UI framework",
+  "description": "React Components wrapper for Material Design Lite UI",
   "main": "lib/index.js",
   "repository": "tleunen/react-mdl",
   "keywords": [
