--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,9 @@
         "space-after-keywords": 0,
 
         "react/prop-types": [2, { "ignore": ["children"] }],
-        "react/no-multi-comp": [2, { "ignoreStateless": true }]
+        "react/no-multi-comp": [2, { "ignoreStateless": true }],
+        "react/jsx-closing-bracket-location": 0,
+        "react/jsx-indent-props": [2, 4]
     },
     "globals": {
         "componentHandler": true,
