--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "html-loader": "^0.3.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.15",
+    "karma": "0.13.15",
     "karma-chrome-launcher": "^0.2.1",
     "karma-cli": "^0.1.1",
     "karma-coverage": "^0.5.3",
