--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "babel-preset-stage-0": "^6.2.4",
     "coveralls": "^2.11.4",
     "eslint": "^1.10.2",
-    "eslint-config-airbnb": "^2.1.1",
+    "eslint-config-airbnb": "^3.0.0",
     "eslint-plugin-react": "^3.11.2",
     "expect": "^1.13.0",
     "history": "~1.17.0",
     "html-loader": "^0.3.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "0.13.15",
+    "karma": "^0.13.19",
     "karma-chrome-launcher": "^0.2.1",
     "karma-cli": "^0.1.1",
     "karma-coverage": "^0.5.3",
