--- a/package.json
+++ b/package.json
@@ -42,43 +42,43 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.2.1"
+    "classnames": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.2.4",
-    "babel-core": "^6.2.4",
-    "babel-eslint": "^4.1.5",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.2.4",
-    "babel-preset-react": "^6.2.4",
-    "babel-preset-stage-0": "^6.2.4",
-    "coveralls": "^2.11.4",
-    "eslint": "^1.10.2",
-    "eslint-config-airbnb": "^3.0.0",
-    "eslint-plugin-react": "^3.11.2",
-    "expect": "^1.13.0",
-    "history": "~1.17.0",
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "coveralls": "^2.11.6",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^3.1.0",
+    "eslint-plugin-react": "^3.15.0",
+    "expect": "^1.13.4",
+    "history": "^1.17.0",
     "html-loader": "^0.3.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.19",
-    "karma-chrome-launcher": "^0.2.1",
-    "karma-cli": "^0.1.1",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
-    "karma-mocha-reporter": "^1.1.3",
+    "karma-mocha-reporter": "^1.1.5",
     "karma-sourcemap-loader": "^0.3.6",
     "karma-webpack": "^1.7.0",
     "marked": "^0.3.5",
-    "marked-renderer-mdl": "^0.0.3",
-    "mocha": "^2.3.3",
+    "marked-renderer-mdl": "0.0.3",
+    "mocha": "^2.3.4",
     "prismjs": "^1.3.0",
-    "react": "^0.14.0",
-    "react-addons-test-utils": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-router": "~1.0.3",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.0"
+    "react": "^0.14.6",
+    "react-addons-test-utils": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-router": "^1.0.3",
+    "webpack": "^1.12.11",
+    "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
     "react": "0.14.x",
