--- a/package.json
+++ b/package.json
@@ -45,20 +45,19 @@
     "classnames": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.0",
-    "babel-core": "^6.4.0",
-    "babel-eslint": "^4.1.6",
-    "babel-loader": "^6.2.1",
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "coveralls": "^2.11.6",
     "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.15.0",
-    "expect": "^1.13.4",
     "eslint-config-airbnb": "^5.0.0",
-    "history": "^1.17.0",
-    "html-loader": "^0.3.0",
+    "eslint-plugin-react": "^3.16.1",
+    "expect": "^1.14.0",
+    "html-loader": "^0.4.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.19",
@@ -67,17 +66,17 @@
     "karma-coverage": "^0.5.3",
     "karma-mocha": "^0.2.1",
     "karma-mocha-reporter": "^1.1.5",
-    "karma-sourcemap-loader": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "marked": "^0.3.5",
     "marked-renderer-mdl": "0.0.3",
-    "mocha": "^2.3.4",
-    "prismjs": "^1.3.0",
-    "react": "^0.14.6",
-    "react-addons-test-utils": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-router": "^1.0.3",
-    "webpack": "^1.12.11",
+    "mocha": "^2.4.5",
+    "prismjs": "^1.4.1",
+    "react": "^0.14.7",
+    "react-addons-test-utils": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0-rc5",
+    "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
