--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.0-rc5",
+    "react-router": "^2.0.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
