--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: node_js
 node_js:
-  - "node"
-  - "4.x"
+  - stable
+  - 4
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
