--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-airbnb": "^6.1.0",
     "eslint-plugin-react": "^4.2.1",
     "expect": "^1.15.2",
+    "gatsby": "gatsbyjs/gatsby#upgrade-babel-6",
     "gh-pages": "^0.11.0",
     "html-loader": "^0.4.3",
     "isparta": "^4.0.0",
