--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,10 @@
         "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
         "comma-dangle": 0,
         "indent": [2, 4, {"SwitchCase": 1}],
-        "no-const-assign": 2,
-        "space-after-keywords": 0,
         "max-len": 0,
 
+        "react/prefer-stateless-function": 0,
         "react/prop-types": [2, { "ignore": ["children"] }],
-        "react/no-multi-comp": [2, { "ignoreStateless": true }],
         "react/jsx-closing-bracket-location": 0,
         "react/jsx-indent-props": [2, 4]
     },
