--- a/package.json
+++ b/package.json
@@ -45,28 +45,28 @@
     "classnames": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.4.5",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^5.0.0",
-    "babel-loader": "^6.2.2",
-    "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "coveralls": "^2.11.6",
-    "eslint": "^1.10.3",
-    "eslint-config-airbnb": "^5.0.0",
-    "eslint-plugin-react": "^3.16.1",
-    "expect": "^1.14.0",
+    "babel-cli": "^6.6.5",
+    "babel-core": "^6.7.2",
+    "babel-eslint": "6.0.0-beta.5",
+    "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "coveralls": "^2.11.8",
+    "eslint": "~2.2.0",
+    "eslint-config-airbnb": "^6.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "expect": "^1.15.2",
     "gh-pages": "^0.11.0",
-    "html-loader": "^0.4.0",
+    "html-loader": "^0.4.3",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.19",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.3",
-    "karma-mocha": "^0.2.1",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
@@ -74,16 +74,16 @@
     "marked-renderer-mdl": "0.0.3",
     "mocha": "^2.4.5",
     "prismjs": "^1.4.1",
-    "react": "^0.14.7",
-    "react-addons-test-utils": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-router": "^2.0.0",
-    "webpack": "^1.12.13",
+    "react": "^15.0.0-rc.1",
+    "react-addons-test-utils": "^15.0.0-rc.1",
+    "react-dom": "^15.0.0-rc.1",
+    "react-router": "^2.0.1",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "0.14.x",
-    "react-dom": "0.14.x"
+    "react": ">= 0.14.0 < 16.0.0 || 15.0.0-rc.1",
+    "react-dom": ">= 0.14.0 < 16.0.0 || 15.0.0-rc.1"
   },
   "scripts": {
     "clean": "rm -rf coverage lib out",
