--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+	"chai": "^3.5.0",
+    "chai-enzyme": "^0.4.1",
     "coveralls": "^2.11.9",
+	"enzyme": "^2.1.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^6.2.0",
     "eslint-plugin-react": "^4.3.0",
@@ -62,6 +65,7 @@
     "gh-pages": "^0.11.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
+    "jsdom": "^8.1.0",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
@@ -90,7 +94,7 @@
     "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
     "test:react:14": "npm run react:14 && npm run test:suite",
     "test:react:15": "npm run react:15 && npm run test:suite",
-    "test:suite": "karma start --single-run",
+    "test:suite": "mocha --compilers js:babel-core/register -r tests.setup.js src/**/Badge*-test.js",
     "pretest": "npm run lint",
     "test": "npm run test:react:14 && npm run test:react:15",
     "test:watch": "karma start --auto-watch",
