changes Checkbox with new ripple component + tests with enzyme/chai

--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   },
   "config": {
     "isparta": "--report lcov --report json --report text",
-    "mocha": "-r tests.setup.js src/**/Badge-test.js src/**/Card*-test.js src/**/Button-test.js"
+    "mocha": "-r tests.setup.js src/**/Badge-test.js src/**/Card*-test.js src/**/Button-test.js src/**/Checkbox-test.js"
   },
   "scripts": {
     "clean": "rimraf coverage lib out",
