--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.5.0",
   "description": "React Components wrapper for Material Design Lite UI",
   "main": "lib/index.js",
+  "jsnext:main": "src/index.js",
   "repository": "tleunen/react-mdl",
   "keywords": [
     "react",
