--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "expect": "^1.15.2",
     "gatsby": "gatsbyjs/gatsby#upgrade-babel-6",
     "gh-pages": "^0.11.0",
-    "html-loader": "^0.4.3",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.22",
@@ -72,10 +71,7 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "marked": "^0.3.5",
-    "marked-renderer-mdl": "0.0.3",
     "mocha": "^2.4.5",
-    "prismjs": "^1.4.1",
     "react": "^15.0.0-rc.2",
     "react-addons-test-utils": "^15.0.0-rc.2",
     "react-dom": "^15.0.0-rc.2",
@@ -94,8 +90,8 @@
     "test:watch": "karma start --auto-watch",
     "lint": "eslint docs src scripts",
     "compile": "rm -rf lib && babel src --ignore __tests__ --out-dir lib",
-    "serve-docs": "npm run build-docs && webpack-dev-server --content-base out/docs/",
-    "build-docs": "babel-node scripts/docs.js",
+    "serve-docs": "gatsby develop ndocs",
+    "build-docs": "gatsby build ndocs",
     "build-umd": "NODE_ENV=production webpack src/index.js out/ReactMDL.js --output-library ReactMDL --output-library-target umd",
     "build-min": "NODE_ENV=production webpack -p src/index.js out/ReactMDL.min.js --output-library ReactMDL --output-library-target umd",
     "release": "./scripts/release.sh",
