--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-mdl",
   "version": "1.5.2",
-  "description": "React Components wrapper for Material Design Lite UI",
+  "description": "React Components for Material Design Lite",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "repository": "tleunen/react-mdl",
