--- a/package.json
+++ b/package.json
@@ -47,24 +47,24 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.2",
-    "babel-eslint": "6.0.0-beta.5",
+    "babel-core": "^6.7.4",
+    "babel-eslint": "^6.0.0-beta.5",
     "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.7.2",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.8",
-    "eslint": "~2.2.0",
-    "eslint-config-airbnb": "^6.1.0",
+    "eslint": "2.2.0",
+    "eslint-config-airbnb": "6.1.0",
     "eslint-plugin-react": "^4.2.1",
-    "expect": "^1.15.2",
-    "gatsby": "gatsbyjs/gatsby#upgrade-babel-6",
+    "expect": "^1.16.0",
+    "gatsby": "github:gatsbyjs/gatsby#upgrade-babel-6",
     "gh-pages": "^0.11.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
     "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.2",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
     "karma-coverage": "^0.5.5",
     "karma-mocha": "^0.2.2",
