- removes stage 0 & babel-eslint for a more standard code - updates gatsby to 0.9 - updates test suite to test against React 0.14 and 15

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,16 @@
 {
     "extends": "airbnb",
-    "parser": "babel-eslint",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "experimentalObjectRestSpread": true
+        }
+    },
     "rules": {
-        "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
         "comma-dangle": 0,
         "indent": [2, 4, {"SwitchCase": 1}],
         "max-len": 0,
 
-        "react/prefer-stateless-function": 0,
         "react/prop-types": [2, { "ignore": ["children"] }],
-        "react/jsx-closing-bracket-location": 0,
         "react/jsx-indent-props": [2, 4]
     },
     "globals": {
