--- a/package.json
+++ b/package.json
@@ -46,20 +46,19 @@
     "classnames": "^2.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.6.5",
-    "babel-core": "^6.7.4",
-    "babel-eslint": "^6.0.0-beta.5",
+    "babel-cli": "^6.7.5",
+    "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "coveralls": "^2.11.8",
-    "eslint": "2.2.0",
-    "eslint-config-airbnb": "6.1.0",
-    "eslint-plugin-react": "^4.2.1",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.7.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.3.0",
     "expect": "^1.16.0",
-    "gatsby": "github:gatsbyjs/gatsby#upgrade-babel-6",
+    "gatsby": "^0.9.0",
     "gh-pages": "^0.11.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
@@ -72,26 +71,33 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
-    "react": "^15.0.0-rc.2",
-    "react-addons-test-utils": "^15.0.0-rc.2",
-    "react-dom": "^15.0.0-rc.2",
+    "react": "^15.0.1",
+    "react-addons-test-utils": "^15.0.1",
+    "react-dom": "^15.0.1",
     "react-router": "^2.0.1",
+    "rimraf": "^2.5.2",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
-    "react": "0.14.x || 15.x || ^15.0.0-rc",
-    "react-dom": "0.14.x || 15.x || ^15.0.0-rc"
+    "react": "0.14.x || ^15.0.0-rc",
+    "react-dom": "0.14.x || ^15.0.0-rc"
   },
   "scripts": {
-    "clean": "rm -rf coverage lib out",
-    "test": "karma start --single-run",
-    "posttest": "npm run lint",
+    "clean": "rimraf coverage lib out",
+    "react:clean": "rimraf node_modules/react node_modules/react-dom node_modules/react-addons-test-utils",
+    "react:14": "npm run react:clean && npm i react@0.14 react-dom@0.14 react-addons-test-utils@0.14",
+    "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
+    "test:react:14": "npm run react:14 && npm run test:suite",
+    "test:react:15": "npm run react:15 && npm run test:suite",
+    "test:suite": "karma start --single-run",
+    "pretest": "npm run lint",
+    "test": "npm run test:react:14 && npm run test:react:15",
     "test:watch": "karma start --auto-watch",
     "lint": "eslint docs src scripts",
-    "compile": "rm -rf lib && babel src --ignore __tests__ --out-dir lib",
-    "serve-docs": "gatsby develop docs",
-    "build-docs": "gatsby build docs --prefix-links",
+    "compile": "rimraf lib && babel src --ignore __tests__ --out-dir lib",
+    "serve-docs": "cd docs && ./node_modules/.bin/gatsby develop",
+    "build-docs": "cd docs && ./node_modules/.bin/gatsby build --prefix-links",
     "build-umd": "NODE_ENV=production webpack src/index.js out/ReactMDL.js --output-library ReactMDL --output-library-target umd",
     "build-min": "NODE_ENV=production webpack -p src/index.js out/ReactMDL.min.js --output-library ReactMDL --output-library-target umd",
     "release": "./scripts/release.sh",
