--- a/package.json
+++ b/package.json
@@ -53,27 +53,20 @@
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-	"chai": "^3.5.0",
+    "babel-register": "^6.7.2",
+    "chai": "^3.5.0",
     "chai-enzyme": "^0.4.1",
     "coveralls": "^2.11.9",
-	"enzyme": "^2.1.0",
+    "enzyme": "^2.1.0",
     "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
+    "eslint-config-airbnb": "^7.0.0",
+    "eslint-plugin-jsx-a11y": "^0.6.2",
     "eslint-plugin-react": "^4.3.0",
     "expect": "^1.16.0",
     "gatsby": "^0.9.1",
     "gh-pages": "^0.11.0",
-    "isparta": "^4.0.0",
-    "isparta-instrumenter-loader": "^1.0.0",
+    "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^8.1.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
@@ -88,8 +81,8 @@
     "react-dom": "0.14.x || ^15.0.0-rc"
   },
   "config": {
-    "isparta": "--report lcov --report json --report text",
-    "mocha": "-r tests.setup.js src/**/Badge-test.js src/**/Card*-test.js src/**/Button-test.js src/**/Checkbox-test.js"
+    "istanbul": "-x **/*-test.js -x tests.setup.js --report lcov --report json --report text --report html",
+    "mocha": "--compilers js:babel-register -r tests.setup.js src/**/Badge-test.js src/**/Card*-test.js src/**/Button-test.js src/**/Checkbox-test.js"
   },
   "scripts": {
     "clean": "rimraf coverage lib out",
@@ -98,7 +91,7 @@
     "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
     "test:react:14": "npm run react:14 && npm run test:suite",
     "test:react:15": "npm run react:15 && npm run test:suite",
-    "test:suite": "babel-node $(npm bin)/isparta cover $npm_package_config_isparta --report html $(npm bin)/_mocha -- $npm_package_config_mocha",
+    "test:suite": "istanbul cover $npm_package_config_istanbul _mocha -- $npm_package_config_mocha",
     "pretest": "npm run lint",
     "test": "npm run test:react:14 && npm run test:react:15",
     "test:watch": "mocha --compilers js:babel-register $npm_package_config_mocha --watch",
