--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,22 @@
+sudo: false
 language: node_js
-node_js:
-  - stable
-  - 5
-  - 4
+matrix:
+  include:
+    - node_js: stable
+      env: SEND_COVERAGE=yes
+    - node_js: 5
+    - node_js: 4
 before_install:
   - export CHROME_BIN=chromium-browser
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 script:
-  - npm test
+  - npm t
 after_success:
   # report coverage to coveralls
-  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  - if [ "$SEND_COVERAGE" == "yes" ]; then echo "coveralls..." && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; fi
   # report coverage to codecov.io
-  - bash <(curl https://codecov.io/bash)
+  - if [ "$SEND_COVERAGE" == "yes" ]; then bash <(curl https://codecov.io/bash); fi
+branches:
+  only:
+    - master
