--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
   },
   "config": {
     "istanbul": "-x **/*-test.js -x tests.setup.js --report lcov --report json --report text --report html",
-    "mocha": "--compilers js:babel-register -r tests.setup.js src/**/+(Badge|Button|Card*|Checkbox|IconToggle|Switch)-test.js"
+    "mocha": "--compilers js:babel-register -r tests.setup.js src/**/+(Badge|Button|Card*|Cell|Checkbox|Grid|IconToggle|Switch)-test.js"
   },
   "scripts": {
     "clean": "rimraf coverage lib out",
