--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,12 @@
   ],
   "plugins": [
       "transform-object-rest-spread",
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "__coverage__"
+      ]
+    }
+  }
 }
