--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
+    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -58,8 +59,8 @@
     "chai-enzyme": "^0.4.1",
     "chai-spies": "^0.7.1",
     "coveralls": "^2.11.9",
-    "cross-env": "^1.0.7",
-	"enzyme": "^2.1.0",
+    "cross-env": "^1.0.8",
+    "enzyme": "^2.1.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^7.0.0",
     "eslint-plugin-jsx-a11y": "^0.6.2",
@@ -70,6 +71,7 @@
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^8.1.0",
     "mocha": "^2.4.5",
+    "nyc": "^6.6.1",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
@@ -82,21 +84,16 @@
     "react": "0.14.x || ^15.0.0-rc",
     "react-dom": "0.14.x || ^15.0.0-rc"
   },
-  "config": {
-    "istanbul": "-x **/*-test.js -x tests.setup.js --report lcov --report json --report text --report html",
-    "mocha": "--compilers js:babel-register -r tests.setup.js src/!(__tests__)/**/+(Badge|Button|Card*|Cell|Checkbox|Fab|Grid|Icon|IconToggle|Snackbar|Switch|Table*|Sortable|Selectable|Tooltip)-test.js"
-  },
   "scripts": {
     "clean": "rimraf coverage lib out",
     "react:clean": "rimraf node_modules/react node_modules/react-dom node_modules/react-addons-test-utils",
     "react:14": "npm run react:clean && npm i react@0.14 react-dom@0.14 react-addons-test-utils@0.14",
     "react:15": "npm run react:clean && npm i react@15 react-dom@15 react-addons-test-utils@15",
-    "test:react:14": "npm run react:14 && npm run test:suite",
-    "test:react:15": "npm run react:15 && npm run test:suite:cov",
-    "test:suite": "mocha --compilers js:babel-register $npm_package_config_mocha",
-    "test:suite:cov": "istanbul cover $npm_package_config_istanbul _mocha -- $npm_package_config_mocha",
+    "test:react:14": "npm run react:14 && cross-env NODE_ENV=test npm run test:suite",
+    "test:react:15": "npm run react:15 && cross-env NODE_ENV=test npm run test:suite",
+    "test:suite": "mocha --compilers js:babel-register -r tests.setup.js 'src/!(__tests__)/**/+(Badge|Button|Card*|Cell|Checkbox|Fab|Grid|Icon|IconToggle|Snackbar|Switch|Table*|Sortable|Selectable|Tooltip)-test.js'",
     "pretest": "npm run lint",
-    "test": "npm run test:react:14 && npm run test:react:15",
+    "test": "npm run test:react:14 && nyc npm run test:react:15",
     "test:watch": "npm run test:suite -- --watch",
     "lint": "eslint docs src scripts",
     "compile": "rimraf lib && babel src --ignore __tests__ --out-dir lib",
@@ -106,5 +103,13 @@
     "build-min": "cross-env NODE_ENV=production webpack -p src/index.js out/ReactMDL.min.js --output-library ReactMDL --output-library-target umd",
     "release": "./scripts/release.sh",
     "release-docs": "gh-pages -d docs/public/ -m 'Updates v'$npm_package_version"
+  },
+  "nyc": {
+    "sourceMap": false,
+    "instrument": false,
+    "reporter": [
+      "lcov",
+      "text"
+    ]
   }
 }
