chore(deps): update dependencies

--- a/package.json
+++ b/package.json
@@ -55,18 +55,20 @@
     "babel-preset-react": "^6.5.0",
     "cross-env": "^1.0.7",
     "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^6.2.0",
-    "eslint-plugin-react": "^4.3.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.9.2",
+    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-react": "5.1.1",
     "expect": "^1.16.0",
-    "gatsby": "^0.9.1",
+    "gatsby": "^0.11.6",
     "gh-pages": "^0.11.0",
     "isparta": "^4.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-cli": "^0.1.2",
-    "karma-coverage": "^0.5.5",
-    "karma-mocha": "^0.2.2",
+    "karma": "^1.0.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-cli": "^1.0.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
