refactor(Badge): Refactor Badge to be SFC + tests using enzyme

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,13 @@
     "react"
   ],
   "plugins": [
-      "transform-object-rest-spread",
-  ]
+    "transform-object-rest-spread"
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "__coverage__"
+      ]
+    }
+  }
 }
