--- a/package.json
+++ b/package.json
@@ -49,11 +49,15 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
+    "babel-plugin-__coverage__": "^11.0.0",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "cross-env": "^1.0.7",
+    "chai": "^3.5.0",
+    "chai-enzyme": "^0.5.0",
+    "cross-env": "^1.0.8",
+    "enzyme": "^2.3.0",
     "eslint": "^2.7.0",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.9.2",
@@ -65,6 +69,7 @@
     "isparta": "^4.0.0",
     "isparta-loader": "^2.0.0",
     "karma": "^1.0.0",
+    "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-cli": "^1.0.0",
     "karma-coverage": "^1.0.0",
@@ -72,7 +77,7 @@
     "karma-mocha-reporter": "^2.0.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
-    "mocha": "^2.4.5",
+    "mocha": "^2.5.3",
     "react": "^15.0.1",
     "react-addons-test-utils": "^15.0.1",
     "react-dom": "^15.0.1",
