fix(DataTable): Fix infinite loop with onSelectionChanged
When the state is changed in onSelectionChanged, an infinite loop was created
because the Selectable component would receive new props and then fire again the
onSelectionChanged event, creating the loop

Fixes #339

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
   "license": "MIT",
   "dependencies": {
     "clamp": "^1.0.1",
-    "classnames": "^2.2.3"
+    "classnames": "^2.2.3",
+    "lodash.isequal": "^4.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.7.5",
