--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "gh-pages": "^0.11.0",
     "isparta": "^4.0.0",
     "isparta-loader": "^2.0.0",
+    "json-loader": "^0.5.4",
     "karma": "^1.0.0",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
