chore(scripts): Update release script

--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-dom": "^15.0.1",
     "react-router": "^2.0.1",
     "rimraf": "^2.5.2",
+    "standard-version": "^2.3.1",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
